#276 Fix text selection when drag&drop metadata on Safari

--- a/server/http-dashboard/app/scenes/Products/components/Metadata/styles.less
+++ b/server/http-dashboard/app/scenes/Products/components/Metadata/styles.less
@@ -120,3 +120,12 @@
     }
   }
 }
+
+.no-mouse-selection *, .product-metadata-item-drag-active * {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
